# digit-classifier

./: .gitignore  Dockerfile.database  Dockerfile.frontend  Dockerfile.model  README.md  docker-compose.yml  ml_model.py  pyproject.toml  pytorch_learning.py  requirements.txt
Notes/: pytorch_learning.py
src/: app.py  run_model.py
src/digit_classifier/: app.py  create_model.py  database.py  feedback_database.py  feedback_db_commands.py  model.py  run_model.py  submit_feedback.py
src/digit_classifier/database/: api.py  connection.py  create_table.py  feedback_cmd.py
src/digit_classifier/frontend/: app.py  call_api.py  request.py
src/digit_classifier/model/: api.py  create_model.py  init_model.py  main.py  model.py  run_model.py
src/feedback_database/: database_commands.py
