[project]
name = "digit-classifier"
version = "0.0.1"
description = "Digit Classifier uses an ML model (trained on the MNIST dataset) to classify a digit drawn by the user"
authors = [
    {name = "Helen Zhou"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = "=3.9.6"
dependencies = [
    "python-dotenv (>=1.1.0,<2.0.0)"
]

[tool.poetry]
name = "digit-classifier"

[tool.poetry.group.frontend]
optional = true

[tool.poetry.group.frontend.dependencies]
requests = { version = ">=2.32.3,<3.0.0"}
streamlit = { version = "<=1.45.0"}
streamlit-drawable-canvas = { version = "<=0.9.3"}

[tool.poetry.group.database]
optional = true

[tool.poetry.group.database.dependencies]
psycopg2-binary = { version = ">=2.9.10,<3.0.0"}
fastapi = { version = ">=0.115.12,<0.116.0"}
requests = { version = ">=2.32.3,<3.0.0"}
uvicorn = { version = ">=0.34.2,<0.35.0"}

[tool.poetry.group.model]
optional = true

[tool.poetry.group.model.dependencies]
fastapi = { version = ">=0.115.12,<0.116.0"}
numpy = { version = "<2.0" }
torch = { version = "<=2.2.2" }
torchvision = { version = "<=0.17.2" }
torchmetrics = { version = "<=1.7.1" }
uvicorn = { version = ">=0.34.2,<0.35.0"}
python-multipart = { version = ">=0.0.20,<0.0.21"}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
